--- a/views/pingpong.erb
+++ b/views/pingpong.erb
@@ -42,14 +42,15 @@
             <li>Numbers divisible by 15 are replaced with "PingPong"</li>
           </ol>
           <div id="form">
-            <form>
+            <form action="/results" method="get">
                 <p><strong>Enter your number here:</strong></p>
 
-                <input id="numInput" class="form-control" type="text">
+                <input id="numInput" name="numInput" class="form-control" type="text">
                 <button type="submit" class="btn">Ping Pong!</button>
             </form>
           </div>
           <div id="output">
+
           </div>
         </div>
       </div>
